# AB.AI

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  models.py  schemas.py
app/routers/: bots.py  (+2 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27ef250bcb2a_initial_schema.py  a1b2c3d4e5f6_conversation_last_read.py  b2c3d4e5f6a7_extend_client_source_enum.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai_agent.py  auth.py  clients.py  conversations.py  realtime.py  teams.py  users.py  webhooks.py
backend/app/core/: config.py  deps.py  exceptions.py  limiter.py  permissions.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  ai_agent_config.py  audit_log.py  campaign.py  car.py  client.py  conversation.py  import_log.py  message.py  notification.py  segment.py  subscription.py  team.py  template.py  user.py  visit.py
backend/app/realtime/: bus.py  events.py
backend/app/schemas/: ai_agent.py  auth.py  client.py  common.py  conversation.py  team.py  user.py
backend/app/services/: ai_agent_service.py  auth_service.py  client_service.py  conversation_service.py  inbound_service.py  team_service.py
backend/app/tasks/: celery_app.py  messages.py
backend/app/utils/: phone.py
backend/tests/: conftest.py  test_conversation_service.py  test_inbound_service.py  test_realtime_bus.py
frontend-web/: package-lock.json  package.json  tailwind.config.ts
mobile/: app.json  package.json
(+37 files in other folders)
